update to block api 2 and fix drawer block alignment styles in the editor

--- a/src/blocks/drawer/editor.scss
+++ b/src/blocks/drawer/editor.scss
@@ -10,7 +10,7 @@
 
 	.wp-block-editorial-drawer-content {
 		display: block !important;
-		float: none !important;
+		//float: none !important;
 		opacity: 1 !important;
 	}
 }
@@ -31,17 +31,22 @@
 	}
 }
 
-[data-type="editorial/drawer"] {
 
-	&[data-align="left"],
-	&[data-align="right"] {
+[data-align="left"],
+[data-align="right"] {
 
-		.editor-block-list__block-edit,
-		.block-editor-block-list__block-edit {
-			width: 50%;
-		}
 
-		.wp-block-editorial-drawer {
+	>[data-type="editorial/drawer"] {
+		float: none;
+		margin-left: 0;
+		margin-right: 0;
+
+		// .editor-block-list__block-edit,
+		// .block-editor-block-list__block-edit {
+		// 	width: 50%;
+		// }
+
+		&.wp-block-editorial-drawer {
 
 			&.is-size-narrow,
 			&.is-size-small,
@@ -49,25 +54,52 @@
 			&.is-size-wide {
 
 				.wp-block-editorial-drawer-teaser {
-					width: 100%;
+					//width: 100%;
 				}
 			}
 		}
 
-		.wp-block-editorial-drawer-teaser {
+		// .wp-block-editorial-drawer-teaser {
 
-			&::before,
-			&::after {
-				display: none;
-			}
-		}
+		// 	&::before,
+		// 	&::after {
+		// 		display: none;
+		// 	}
+		// }
 
+		// Float the content left so it fills the content column like it does
+		// on the frontend when a floated Drawer block's content area is opened.
+		// The content area should be the width of the unfloated blocks on the page, not the narrower
+		// width of the floated teaser part of the block.
 		.wp-block-editorial-drawer-content {
+			float:left;
 
 			.editor-block-list__block-edit
 			.block-editor-block-list__block-edit {
 				width: 100%;
 			}
 		}
+
+		.wp-block-editorial-drawer-clearfix {
+			clear:both;
+		}
+	}
+}
+
+
+// Float the Teaser left and right instead of the
+// <aside> element that wraps around the entire block. This mimics the frontend styles
+// better.
+[data-align="right"] {
+	>[data-type="editorial/drawer"] .wp-block-editorial-drawer-teaser {
+		float: right;
+		margin-left: 2em;
+	}
+}
+
+[data-align="left"] {
+	>[data-type="editorial/drawer"] .wp-block-editorial-drawer-teaser {
+		float: left;
+		margin-right: 2em;
 	}
 }
